[package]
name = "access_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0", features = ["rustls-tls", "json", "multipart"], default-features = false}
tokio = { version = "*", features = ["full"]}
hex-literal = "*"
sha1 = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"
azure_core = { version = "*", default-features = false, features = ["reqwest", "debug"] }
azure_identity = { version = "*", default-features = false }
chrono ="*"
tiberius = {version="*", default-features=false, features=["tds73", "rustls", "sql-browser-tokio"]}
tokio-util = { version="0.7.12", features=["full", "compat"] }
futures= "*"
async-trait="*"
base64 = "*"
azure_storage_blob = "*"
sha2 = "*"
hmac = "*"
typespec_client_core = "*"
thiserror = "*"
data_ingester_splunk = { git = "https://github.com/DFE-Digital/service-security-posture-hardening.git" }
csv = "*"
regex = "*"
walkdir = "*"
clap = { version = "*", features = ["derive", "env"]}
tracing = "0.1"
tracing-subscriber = "0.3"
url = "*"
urlencoding = "*"